--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,21 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
+*.class
+
+**/*.class
+
+# Package Files #
+*.jar*
+*.war
+*.ear
+
+/**/target/
+
+**/eclipsebin
+
+**/eclipsebin/
+
+.metadata/**
+
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
+/.metadata/
+
+NAGP_2021_Microservice/*/target/
